# neri-printer-manager

./: .gitignore  README.md  bootstrap.sh  install.sh  pyproject.toml  uninstall.sh
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  package.yml
docs/: HOMOLOGATION.md
packaging/debian/: neri-printer-manager.desktop
packaging/libexec/: neri-printer-helper
packaging/polkit/: com.neriinfotech.printermanager.policy
scripts/: build_deb.sh  preflight.sh  validate.sh
src/neri_printer_manager/: __init__.py  app.py  backup.py  cli.py  core.py  cups_filters.py  dependencies.py  device_discovery.py  enhanced_app.py  guided_app.py  health.py  host_display.py  host_locator.py  installer.py  logging_config.py  network.py  protocols.py  repair.py  reports.py  safe_app.py  sharing.py  smart_install.py  ui_theme.py  usb.py  wizard.py
tests/: test_core.py  test_dependencies.py  test_device_discovery.py  test_host_display.py  test_host_locator.py  test_installer.py  test_network.py  test_protocols.py  test_reports.py  test_smart_install.py  test_ui_smoke.py
