[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "neri-printer-manager"
version = "1.4.1"
description = "Gerenciador, descoberta, instalação e diagnóstico de impressoras para Linux Mint"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Neri InfoTech"}]
dependencies = ["PySide6>=6.6,<7"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
neri-printer-manager = "neri_printer_manager.safe_app:main"
neri-printer-cli = "neri_printer_manager.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/neri_printer_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["neri_printer_manager"]
